<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.StartActivity">

    <Button
            android:text="@string/start_verification_button"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="214dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/bt_start_verification" />

    <Button
            android:text="@string/start_verification_button_with_theme"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/bt_start_verification"
            android:layout_centerHorizontal="true"
            android:id="@+id/bt_start_verification_with_theme" />

    <TextView
            android:text="@string/api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_api_key"
            android:layout_above="@id/et_api_key"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/no_api_key"
            android:importantForAutofill="no"
            android:ems="10"
            android:id="@+id/et_api_key"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp" />

</RelativeLayout>